--- a/.github/workflows/e2e.tests.yml
+++ b/.github/workflows/e2e.tests.yml
@@ -30,7 +30,7 @@ jobs:
       run: chmod +x node_modules/.bin/serve || true
 
     - name: Run E2E tests
-      run: npx playwright test
+      run: npx playwright test --project=chromium
 
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
