--- a/.github/workflows/e2e.multi.browser.tests.yml
+++ b/.github/workflows/e2e.multi.browser.tests.yml
@@ -5,6 +5,7 @@ on:
   pull_request:
     branches: [ main, master ]
 jobs:
+  # Testes no Chromium
   tests-chromium:
     timeout-minutes: 60
     runs-on: ubuntu-latest
@@ -39,6 +40,7 @@ jobs:
         path: playwright-report/
         retention-days: 30
 
+  # Testes no Firefox
   tests-firefox:
     timeout-minutes: 60
     runs-on: ubuntu-latest
@@ -73,6 +75,7 @@ jobs:
         path: playwright-report/
         retention-days: 30
 
+  # Testes no Webkit
   tests-webkit:
     timeout-minutes: 60
     runs-on: ubuntu-latest
