--- a/.github/workflows/e2e.tests.yml
+++ b/.github/workflows/e2e.tests.yml
@@ -1,6 +1,11 @@
 name: E2E Tests
 on:
   workflow_dispatch:
+    inputs:
+      browser:
+        description: 'Escolha o navegador de sua preferência para os testes (chromium, firefox, webkit)'
+        required: true
+        default: 'chromium'
 jobs:
   test:
     timeout-minutes: 60
@@ -21,17 +26,17 @@ jobs:
       run: npm install
 
     - name: Install Playwright Browsers
-      run: npx playwright install --with-deps chromium
+      run: npx playwright install --with-deps ${{ github.event.inputs.browser }}
 
     - name: Fix permissions
       run: chmod +x node_modules/.bin/serve || true
 
     - name: Run E2E tests
-      run: npx playwright test --project=chromium
+      run: npx playwright test --project=${{ github.event.inputs.browser }}
 
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
-        name: playwright-report
+        name: playwright-report-${{ github.event.inputs.browser }}
         path: playwright-report/
         retention-days: 30
